--- a/src/ExStreamlWriter.Tests/ExStreamWriter.Tests.csproj
+++ b/src/ExStreamlWriter.Tests/ExStreamWriter.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7CCA8126-C7BD-4138-9A78-77B644A90186}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StreamingExcelWriter.Tests</RootNamespace>
-    <AssemblyName>StreamingExcelWriter.Tests</AssemblyName>
+    <RootNamespace>ExStreamWriter.Tests</RootNamespace>
+    <AssemblyName>ExStreamWriter.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreamingExcelWriter\StreamingExcelWriter.csproj">
+    <ProjectReference Include="..\ExStreamlWriter\ExStreamWriter.csproj">
       <Project>{81F6D388-4C8C-40A0-B5B9-9B962062E73E}</Project>
-      <Name>StreamingExcelWriter</Name>
+      <Name>ExStreamWriter</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
