--- a/src/ExStream.Tests/ExStream.Tests.csproj
+++ b/src/ExStream.Tests/ExStream.Tests.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{81F6D388-4C8C-40A0-B5B9-9B962062E73E}</ProjectGuid>
+    <ProjectGuid>{7CCA8126-C7BD-4138-9A78-77B644A90186}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExStreamWriter</RootNamespace>
-    <AssemblyName>ExStreamWriter</AssemblyName>
+    <RootNamespace>ExStream.Tests</RootNamespace>
+    <AssemblyName>ExStream.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,28 +34,31 @@
       <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CellWriters\BooleanCellWriter.cs" />
-    <Compile Include="CellWriters\DateTimeCellWriter.cs" />
-    <Compile Include="ExcelSheetWriter.cs" />
-    <Compile Include="ExcelWriter.cs" />
-    <Compile Include="ExcelWriterConfig.cs" />
-    <Compile Include="ICellWriter.cs" />
-    <Compile Include="CellWriters\NumberCellWriter.cs" />
+    <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CellWriters\StringCellWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExStream\ExStream.csproj">
+      <Project>{81F6D388-4C8C-40A0-B5B9-9B962062E73E}</Project>
+      <Name>ExStream</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
